= Changelog of IDEasy

This file documents all notable changes to https://github.com/devonfw/IDEasy[IDEasy].

== 2025.11.001

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/1473[#1473]: option --skip-updates not working
* https://github.com/devonfw/IDEasy/issues/536[#536]: IDEasy complete tries to match commandlets twice
* https://github.com/devonfw/IDEasy/issues/1510[#1510]: Make icd more usable
* https://github.com/devonfw/IDEasy/issues/1169[#1169]: mklink fails if link already exists
* https://github.com/devonfw/IDEasy/issues/1553[#1553]: IDEasy is slow since 2025.09.001
* https://github.com/devonfw/IDEasy/issues/1555[#1555]: Handle npm_config_prefix environment variable
* https://github.com/devonfw/IDEasy/issues/1559[#1559]: IDEasy MSI installer creates multiple PATH entries
* https://github.com/devonfw/IDEasy/issues/1551[#1551]: Display network connection issues in status
* https://github.com/devonfw/IDEasy/issues/1560[#1560]: Enable trace logging in IDEasy setup script
* https://github.com/devonfw/IDEasy/issues/1586[#1586]: Use BASH_PATH when set before searching in registry or PATH
* https://github.com/devonfw/IDEasy/issues/1564[#1564]: Print path to git bash to IDEasy log

The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/37?closed=1[milestone 2025.11.001].

== 2025.10.002

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/1492[#1492]: Add spring-boot CLI Commandlet.
* https://github.com/devonfw/IDEasy/issues/1545[#1545]: Yarn can not be installed after corepack
* https://github.com/devonfw/IDEasy/issues/1549[#1549]: IDEasy omits error messages when a download fails

The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/36?closed=1[milestone 2025.10.002].

== 2025.10.001

Release with new features and bugfixes:
